kotlin.web.demo.test/testData/errors/verifyError.kt
fun main(args : Array<String>) {
    System.out?.println("Hello, world!")
    var a = object: Iterator<
}